--- a/index.html
+++ b/index.html
@@ -1,189 +1,309 @@
-<!-- @format -->
-
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/dataTables.semanticui.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto+Condensed&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Ma+Shan+Zheng|Raleway&display=swap" rel="stylesheet"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
-    <style>
-      body {
-        font-family: "Roboto Condensed", sans-serif;
-        font-size: 1.2rem;
-        background-color: #a3c4bc;
-        text-align: center;
-      }
-      table.dataTable thead th,
-      table.dataTable.no-footer {
-        border-bottom: none;
-      }
-      .content{
-        margin:50px 7%;
-      }
-      img {
-        width: 25px;
-        margin-right: 5px;
-      }
-      thead tr th:nth-child(1),
-      tbody tr td:nth-child(1),h1 ,from{
-        font-family: "Noto Sans TC", sans-serif;
-      }
-      table.dataTable tbody tr {
-        background-color: #f2dda4 !important;
-      }
-      .sunrise {
-        margin-right: 10px;
-      }
-      .sunset {
-        margin-left: 10px;
-      }
-      .footer{
-        left: 50%;
-        color: #e38817;
-        font-size: 2rem;
-        font-family: "Ma Shan Zheng", cursive;
-      }
-    </style>
-  </head>
+<html>
 
-  <body>
-    <div class='content'>
-        <h1>未來七日日出日落時間</h1>
-        <table id="table" class="ui celled tabl hover row-border">
-            <thead>
-                <tr>
-                    <th>縣市</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-        <tbody></tbody>
-      </table>
-    </div>
-    <p class='form'>資料來源中央氣象局</p>
-    <p class="footer">reirajiang © 2020</p>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>日出日落時刻</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+		integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
 
-    <script>
-      var print = "";
-      var data;
-      var now = new Date();
-      var thisyear = now.getFullYear();
-      var nextyear = thisyear + 1;
-      var starttime = new Date(`January 1,${thisyear} 00:00:00`).getTime();
-      var endtime = new Date(`January 1,${thisyear + 1} 00:00:00`).getTime();
-      var target = (endtime - starttime) / 1000;
-      var today = Math.floor(target / 60 / 60 / 24);
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&family=Raleway:wght@500&display=swap"
+		rel="stylesheet" />
+	<link rel="stylesheet" href="loader.css">
+	<style>
+		h1 {
+			color: #eee5e5;
+		}
 
-      $.getJSON("https://opendata.cwb.gov.tw/fileapi/v1/opendataapi/A-B0062-001?Authorization=CWB-9444FCA9-4990-439C-A8EE-52BC14185B39&downloadType=WEB&format=JSON")
-        .done(function(re) {
-          data = re.cwbopendata.dataset;
-          $("thead").find("th").eq(1).text(`${data.locations.location[0].time[today - 1].dataTime}`);
-          $("thead").find("th").eq(2).text(`${data.locations.location[0].time[today].dataTime}`);
-          $("thead").find("th").eq(3).text(`${data.locations.location[0].time[today + 1].dataTime}`);
-          $("thead").find("th").eq(4).text(`${data.locations.location[0].time[today + 2].dataTime}`);
-          $("thead").find("th").eq(5).text(`${data.locations.location[0].time[today + 3].dataTime}`);
-          $("thead").find("th").eq(6).text(`${data.locations.location[0].time[today + 4].dataTime}`);
-          $("thead").find("th").eq(7).text(`${data.locations.location[0].time[today + 5].dataTime}`);
-          for (let i = 0; i < data.locations.location.length; i++) {
-            print += `
-                <tr>
-                <td>${data.locations.location[i].locationName}</td>
-                <td>
-                    <span class='sunrise'>
-                    <img src="img/sunrise.png" alt="日出時間" srcset="">
-                        ${data.locations.location[i].time[today - 1].parameter[1].parameterValue.substr(0, 5)}
-                        </span>
-                    <span class='sunset'>
-                    <img src="img/sunset.png" alt="日落時間" srcset="">
-                        ${data.locations.location[i].time[today - 1].parameter[5].parameterValue.substr(0, 5)}
-                    </span>
-                </td>
-                <td>
-                    <span class='sunrise'>
-                    <img src="img/sunrise.png" alt="日出時間" srcset="">
-                        ${data.locations.location[i].time[today].parameter[1].parameterValue.substr(0, 5)}
-                        </span>
-                    <span class='sunset'>
-                    <img src="img/sunset.png" alt="日落時間" srcset="">
-                        ${data.locations.location[i].time[today].parameter[5].parameterValue.substr(0, 5)}
-                    </span>
-                </td>
-                <td>
-                    <span class='sunrise'>
-                    <img src="img/sunrise.png" alt="日出時間" srcset="">
-                        ${data.locations.location[i].time[today + 1].parameter[1].parameterValue.substr(0, 5)}
-                        </span>
-                    <span class='sunset'>
-                    <img src="img/sunset.png" alt="日落時間" srcset="">
-                        ${data.locations.location[i].time[today + 1].parameter[5].parameterValue.substr(0, 5)}
-                    </span>
-                </td>
-                <td>
-                    <span class='sunrise'>
-                    <img src="img/sunrise.png" alt="日出時間" srcset="">
-                        ${data.locations.location[i].time[today + 2].parameter[1].parameterValue.substr(0, 5)}
-                        </span>
-                    <span class='sunset'>
-                    <img src="img/sunset.png" alt="日落時間" srcset="">
-                        ${data.locations.location[i].time[today + 2].parameter[5].parameterValue.substr(0, 5)}
-                    </span>
-                </td>
-                <td>
-                    <span class='sunrise'>
-                    <img src="img/sunrise.png" alt="日出時間" srcset="">
-                        ${data.locations.location[i].time[today + 3].parameter[1].parameterValue.substr(0, 5)}
-                        </span>
-                    <span class='sunset'>
-                    <img src="img/sunset.png" alt="日落時間" srcset="">
-                        ${data.locations.location[i].time[today + 3].parameter[5].parameterValue.substr(0, 5)}
-                    </span>
-                </td>
-                <td>
-                    <span class='sunrise'>
-                    <img src="img/sunrise.png" alt="日出時間" srcset="">
-                        ${data.locations.location[i].time[today + 4].parameter[1].parameterValue.substr(0, 5)}
-                        </span>
-                    <span class='sunset'>
-                    <img src="img/sunset.png" alt="日落時間" srcset="">
-                        ${data.locations.location[i].time[today + 4].parameter[5].parameterValue.substr(0, 5)}
-                    </span>
-                </td>
-                <td>
-                    <span class='sunrise'>
-                    <img src="img/sunrise.png" alt="日出時間" srcset="">
-                        ${data.locations.location[i].time[today + 5].parameter[1].parameterValue.substr(0, 5)}
-                        </span>
-                    <span class='sunset'>
-                    <img src="img/sunset.png" alt="日落時間" srcset="">
-                        ${data.locations.location[i].time[today + 5].parameter[5].parameterValue.substr(0, 5)}
-                    </span>
-                </td>
-                
-                </tr>
-                `;
-          }
+		body {
+			font-family: "Noto Sans TC", sans-serif;
+			/* background-color: #fcd29f; */
+			/* background-color: #efa48b; */
+			background-color:#19647e;
+		}
 
-          $("tbody").html(print);
-          $("#table").DataTable();
-          $("#table_filter").hide();
-          $(".dataTables_length").hide();
-        })
-        .fail(function() {
-          alert("氣象局API有問題暫時無法連線");
-        });
-    </script>
-  </body>
+		table tbody tr td {
+			height: 50px !important;
+		}
+
+		.list-group {
+			flex-direction: row;
+		}
+
+		.day_s {
+			border: 0;
+			background-color: #95d9da;
+			/* border-top-width: 1px !important; */
+			/* border-left-width: 0 !important; */
+			border-radius: 0.25rem !important;
+			box-shadow: 2px 2px 5px gray;
+		}
+
+		.location {
+			background: #E69B81;
+			box-shadow: 4px 4px 8px gray;
+			margin-bottom: 15px;
+		}
+
+		img {
+			width: 30px;
+		}
+
+		.time_txt {
+			font-family: "Raleway", sans-serif;
+		}
+
+		.city_name {
+			color: #FFCA33;
+		}
+
+		.time_txt {
+			color: black;
+			font-weight: bolder;
+		}
+		.footer a {
+			color: #FFCA33;
+		}
+	</style>
+</head>
+
+<body>
+	<div class="container" id="bg-loading">
+		<div class="item-1"></div>
+		<div class="item-2"></div>
+		<div class="item-3"></div>
+		<div class="item-4"></div>
+		<div class="item-5"></div>
+	</div>
+	<div id="content_">
+		<div class="header text-center mt-md-5 mt-3 mb-3">
+			<h1>日出日落時刻</h1>
+		</div>
+		<div class="container mt-3 pr-sm-0">
+			<div class="form-group col-sm-3 ml-auto pr-sm-0">
+				<select class="form-control" id="locationselect" onchange="location_change()">
+					<option hidden>選擇縣市</option>
+					<option value="all">全部</option>
+				</select>
+			</div>
+		</div>
+		<div class="container">
+			<div class="ml-2 mr-2">
+				<div class="row data_content">
+					<!-- <div class="col-12 location">
+						<p class="h2 mb-2 mt-2 text-center city_name">XXX</p>
+						<ul class="list-group list-group-horizontal-md flex-wrap mb-2">
+							<li class="day_s col-4 col-md-2 list-group-item card w-25">
+								<div class="card-body p-0">
+									<div class="row d-flex justify-content-center">
+										<div class="col-12 text-center mb-2 text-light">
+											<span>星期一</span><br />
+											<span>2020/08</span>
+											<hr class="m-1" />
+										</div>
+										<div class="mb-3 mr-2"><img src="img/01.png" title="日出時刻" alt="日出時刻" class="" /><span title="日出時刻" class="time_txt">05:20</span></div>
+										<div class="mb-3"><img src="img/03.png" title="月出時刻" alt="月出時刻" class="" /><span title="月出時刻" class="time_txt">05:20</span></div>
+										<div class="mb-3 mr-2"><img src="img/02.png" title="日沒時刻" alt="日沒時刻" class="" /><span title="日沒時刻" class="time_txt">05:20</span></div>
+										<div calss="mb-3"><img src="img/04.png" title="月沒時刻" alt="月沒時刻" class="" /><span title="月沒時刻" class="time_txt">05:20</span></div>
+									</div>
+								</div>
+							</li>
+						</ul>
+					</div> -->
+				</div>
+			</div>
+		</div>
+		<div class="footer text-center">
+			<a class="text-decoration-none"
+				href="https://opendata.cwb.gov.tw/dataset/astronomy?page=1">資訊來源:中央氣象局 氣象開放平台</a>
+			<br />
+			<a class="text-decoration-none" href="mailto:yingrong.chang@gmail.com?subject=日出日落API">CopyRight
+				2020 © ReiraJiang</a>
+		</div>
+	</div>
+
+
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+		integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+		crossorigin="anonymous"></script>
+	<script>
+		var print = "";
+		var sundata = []; //日出日落總資料
+		var moondata = []; //月亮升起降落總資料
+		var now = new Date(); //日期
+		var location_arr = new Array(); //地區list
+		var time = new Date(); //時間
+		var today = `${time.getFullYear()}-${chk_num(time.getMonth() + 1)}-${chk_num(time.getDate())}`;
+		var sundataset_ = []; //要顯示的資料
+		var moondataset_ = []; //要顯示的資料
+		var mixdata_ = [];
+
+		$(function () {
+			$("#content_").hide();
+			getjson_data();
+			console.log("ready");
+		});
+
+		function chk_num(num) {
+			if (num < 10) {
+				return "0" + num;
+			} else {
+				return num;
+			}
+		}
+
+		function do7days() {
+			var today_idx;
+			var days7_idx = [];
+
+			//用sundata找出今天在哪
+			$(sundata.locations.location[0].time).each(function () {
+				if (this.dataTime == today) {
+					today_idx = sundata.locations.location[0].time.indexOf(this);
+				}
+			});
+			// 順便找出未來5天順便塞地點時間
+			if (today_idx) {
+				$(sundata.locations.location).each(function () {
+					var set_ = {
+						sunrise: "",
+						sundown: "",
+						moonrise: "",
+						moondown: "",
+					};
+					var dataset = [];
+					var location_name = this.locationName;
+					for (i = today_idx; i < today_idx + 5; i++) {
+						dataset.push({ date: this.time[i].dataTime, days: calc_date(this.time[i].dataTime), data: set_, num: i });
+					}
+					mixdata_.push({ locate: location_name, dataset: dataset });
+				});
+
+				//把sundata放到mixdata
+				$(sundata.locations.location).each(function () {
+					var this_location = this;
+					$(mixdata_).each(function () {
+						var mix_d = this;
+						if (this_location.locationName == mix_d.locate) {
+							$(mix_d.dataset).each(function () {
+								this.data.sunrise = this_location.time[this.num].parameter[1].parameterValue;
+								this.data.sundown = this_location.time[this.num].parameter[5].parameterValue;
+							});
+						}
+					});
+				});
+				//把moondata放到mixdata
+				$(moondata.locations.location).each(function () {
+					var this_location = this;
+					$(mixdata_).each(function () {
+						var mix_d = this;
+						if (this_location.locationName == mix_d.locate) {
+							$(mix_d.dataset).each(function () {
+								this.data.moonrise = this_location.time[this.num].parameter[0].parameterValue; //月出
+								this.data.moondown = this_location.time[this.num].parameter[4].parameterValue; //月沒
+							});
+						}
+					});
+				});
+				// end
+				// do view
+				make_view(mixdata_);
+				$("#bg-loading").hide();
+				$("#content_").show();
+				
+			}
+		}
+
+		function getjson_data() {
+			$.when(
+				$.getJSON("https://opendata.cwb.gov.tw/fileapi/v1/opendataapi/A-B0062-001?Authorization=CWB-9444FCA9-4990-439C-A8EE-52BC14185B39&downloadType=WEB&format=JSON"),
+				$.getJSON("https://opendata.cwb.gov.tw/fileapi/v1/opendataapi/A-B0063-001?Authorization=CWB-9444FCA9-4990-439C-A8EE-52BC14185B39&downloadType=WEB&format=JSON")
+			)
+				.done(function (result1, result2) {
+					sundata = result1[0].cwbopendata.dataset;
+					moondata = result2[0].cwbopendata.dataset;
+					for (i = 0; i < sundata.locations.location.length; i++) {
+						location_arr.push(sundata.locations.location[i].locationName);
+					}
+					$(location_arr).each(function () {
+						var print = `<option value='${this}'>${this}</option>`;
+						$("#locationselect").append(print);
+					});
+					do7days();
+				})
+				.fail(function () {
+					alert("氣象局API有問題暫時無法連線");
+				});
+		}
+
+		function make_view(arr) {
+			var print = "";
+			var data_arr = arr;
+			$(data_arr).each(function () {
+				var location_ = this;
+				print += `
+					<div class="col-12 location">
+						<p class="h2 mb-2 mt-2 text-center city_name">${location_.locate}</p>
+						<ul class="list-group list-group-horizontal-md flex-wrap mb-2 justify-content-md-between">
+					`;
+				for (i = 0; i < location_.dataset.length; i++) {
+					var isWeekend = 0;
+					if (location_.dataset[i].days == "星期六" || location_.dataset[i].days == "星期日") {
+						isWeekend = 1;
+					}
+					print += `
+						<li class="day_s col-6 col-md-2 mt-2 list-group-item card">
+								<div class="card-body p-0">
+									<div class="row d-flex justify-content-center">
+										<div class="col-12 text-center mb-2 ${isWeekend == 1 ? "text-danger" : "text-light"}">
+											<span>${location_.dataset[i].days}</span><br />
+											<span>${location_.dataset[i].date}</span>
+											<hr class="m-1" />
+										</div>
+										<div class="mb-3 mr-1"><img src="img/01.png" title="日出時刻" alt="日出時刻" class="mr-3" /><span title="日出時刻" class="time_txt">${location_.dataset[i].data.sunrise}</span></div>
+										<div class="mb-3 mr-1"><img src="img/02.png" title="日沒時刻" alt="日沒時刻" class="mr-3" /><span title="日沒時刻" class="time_txt">${location_.dataset[i].data.sundown}</span></div>
+										<div class="w-100"></div>
+										<div class="mb-3"><img src="img/03.png" title="月出時刻" alt="月出時刻" class="mr-3" /><span title="月出時刻" class="time_txt">${location_.dataset[i].data.moonrise}</span></div>
+										<div calss="mb-3"><img src="img/04.png" title="月沒時刻" alt="月沒時刻" class="mr-3" /><span title="月沒時刻" class="time_txt">${location_.dataset[i].data.moondown}</span></div>
+									</div>
+								</div>
+							</li>
+						`;
+				}
+				print += `
+						</ul>
+					</div>
+				`;
+			});
+			$(".data_content").html(print);
+		}
+
+		function calc_date(datttte) {
+			var days = ["星期日", "星期一", "星期二", "星期三", "星期四", "星期五", "星期六"];
+			var newdate = new Date(datttte);
+			return days[newdate.getDay()];
+		}
+
+		function location_change() {
+			var _select = $("#locationselect").val();
+			if (_select == "all") {
+				make_view(mixdata_);
+			} else {
+				$(mixdata_).each(function (idx, ele) {
+					if (_select == ele.locate) {
+						make_view(ele);
+					}
+				});
+			}
+
+		}
+	</script>
+</body>
+
 </html>
